# slopbox

./: Makefile  README.md  pyproject.toml
src/slopbox/: app.py  base.py  claude.py  genimg.py  model.py  replicate.py  ui.py  videosync.py  view.py
src/slopbox/gmail/: __init__.py  claude_inbox.py  model.py  routes.py  sync.py  ui.py  ui_insights.py
src/slopbox/image/: gallery.py  img.py  slideshow.py  spec.py
src/slopbox/pageant/: __init__.py  model.py  routes.py  ui.py
src/slopbox/prompt/: form.py
src/yap/: __init__.py  app.py  base.py  claude.py  model.py  replicate.py  view.py  views.py  yap.py
static/: video-sync.js
tests/: test_videosync_integration.py
