[project]
name = "yap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mikael Brockman", email = "mikael@brockman.se" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.46.0",
    "fastapi[standard]>=0.115.8",
    "replicate>=1.0.4",
    "tagflow>=0.6.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
yap = "yap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
